# tailor

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  install_deps.ps1
src/: CMakeLists.txt  Tailor.cpp  Tailor.h
